--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4">
-            <h2></h2>
+            <h2>Search</h2>
+            <h2>Learn</h2>
+            <h2>Help</h2>
             <p>Find a pet based on location, type, breed, age, and gender. We look through hundreds of shelters, agencies, and rescue sites. </p>
             <a href="#" class="btn">Go</a>
           </div>
